--- a/task-manager-backend/.env
+++ b/task-manager-backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/task_manager
+MONGODB_URI=mongodb+srv://task-manager-1:test123@task-manage-db.sadtekq.mongodb.net/?retryWrites=true&w=majority&appName=task-manage-db
 JWT_SECRET=supersecretkey
